3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
CVS changes since last release:

server/apply.c: Modify apply_id_altar check for player - had a && instead of
    a ||.
socket/item.c: Modify ApplyCmd so a removed player can not apply objects.
   Fix crashes caused by players applying savebeds after they have
   used the bed.  MSW 2001-04-26

server/spell_util.c: have put_a_monster generate random monster
   abilities.
TODO, doc/mapguide: Various minor updates.
MSW 2001-04-25

server/c_object.c: Pass right object to query_cost_string so that
   if you pick up an unpaid object into a container, it generates
   the correct price.  MSW 2001-04-22
server/c_wiz.c: fix shutdown and reset_map wizard commands/function
   so they no longer crash the server.  MSW 2001-04-22

server/monster.c: add check to was_destroyed when monster fires an
   arrow.  Call was certainly missing, and appears to be responsible for
   crash.  MSW 2001-04-20

server/player.c: Clear op->chosen_skill when we get to the play_again
   prompt.  Otherwise, the server may try to use this later on, and it
   no longer points to a valid object, so it results in a crash.
   MSW 2001-04-19

server/skill_util.c: Add missing call to out_of_map in skill_attack which
  could result in crashes if player is at edge of maps and decides to attack
  in direction off map.  MSW 2001-04-18

server/attack.c: Remove error message about golem without owners,
   also add better checking before clering the op->contr->golem field.
common/map.c: set status flag on maps to MAP_SAVING so remove_ob does
   not do extra work when we are deleting a map (ie, immediate reset)
   from emory.